rnsc/test_data/rns_integration/error/parser/class_header/access_flags/bridge.rns
.class bridge HelloWorld
.super java/lang/Object
.class_end
